# orbital-radar

./: .env.example  .gitignore  LICENSE  README.md  acknowledgments.html  genindex.html  getting_started.html  index.html  orbital_radar_config.toml.example  py-modindex.html  pyproject.toml  search.html  searchindex.js  tox.ini
_modules/orbital_radar/readers/: config.html  radar.html
_sources/: getting_started.rst.txt  installation.rst.txt  overview.rst.txt
api/: plotting.html  radarspec.html  readers.html  simulator.html  writers.html
doc/: .Makefile.swp  acknowledgments.rst  conf.py
doc/_build/doctrees/: acknowledgments.doctree  changelog.doctree  environment.pickle  getting_started.doctree  introduction.doctree  output_description.doctree  overview.doctree
doc/_build/html/: .buildinfo  acknowledgments.html  api-reference.html  changelog.html  installation.html  introduction.html  output_description.html  overview.html  py-modindex.html  search.html  searchindex.js
doc/api/: helpers.rst  radarspec.rst  suborbital.rst
doc/doctrees/: api-reference.doctree  environment.pickle  index.doctree
doc/html/: getting_started.html  searchindex.js
docs/: api-reference.rst  conf.py
docs/api/: writers.rst
docs/doctrees/: installation.doctree
docs/html/: index.html  installation.html  objects.inv  output_description.html
examples/: demo.ipynb
src/orbital_radar/: __init__.py  __main__.py  helpers.py  radarspec.py  simulator.py  suborbital.py  version.py
test/: test_cli.py  test_plot.py  test_radarspec.py  test_reader.py  test_simulator.py  test_suborbital.py
(+53 files in other folders)
